--- a/packages/manager/package.json
+++ b/packages/manager/package.json
@@ -1,26 +1,15 @@
 {
   "name": "@web-overlay/manager",
   "version": "0.0.0",
-  "description": "Connection manager for Web-based overlay networks",
+  "description": "connection manager of web-overlay",
   "author": "Kota Abe <k-abe@osaka-cu.ac.jp>",
   "contributors": [
     "Li Jiaoke",
     "Yuji Kawai",
-    "Zheng Yanzu",
-    "Ryo Tanaka"
+    "Zheng Yanzu"
   ],
-  "homepage": "",
+  "homepage": "https://web-overlay.github.io",
   "license": "GPL-3.0-only",
-  "directories": {
-    "test": "test"
-  },
-  "files": [
-    "lib",
-    "src"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "build": "tsc",
     "precommit": "lint-staged",
@@ -41,7 +30,6 @@
     "openpgp": "^4.10.4",
     "setimmediate": "^1.0.5",
     "simple-peer": "^9.7.2",
-    "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
@@ -50,9 +38,7 @@
     "@types/graphlib": "^2.1.6",
     "@types/mocha": "^7.0.2",
     "@types/node": "13.11.1",
-    "@types/node-static": "^0.7.5",
     "@types/simple-peer": "^9.6.0",
-    "@types/socket.io": "^2.1.6",
     "@types/socket.io-client": "^1.4.33",
     "@typescript-eslint/eslint-plugin": "3.0.0",
     "@typescript-eslint/parser": "3.0.0",
