--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -16,7 +16,7 @@
     "precommit": "lint-staged",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint src/**/*.ts",
-    "test": "mocha -- test/*.ts"
+    "test": "mocha -- test/test*.ts"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.js",
@@ -27,6 +27,7 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "@types/graphlib": "^2.1.6",
     "@types/mocha": "^7.0.2",
     "@types/node": "13.11.1",
     "@types/node-static": "^0.7.5",
@@ -38,6 +39,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "get-browser-rtc": "^1.0.2",
+    "graphlib": "^2.1.7",
     "lint-staged": "^9.2.5",
     "mocha": "^6.2.3",
     "mocha-typescript": "^1.1.17",
