--- a/packages/kirin/package.json
+++ b/packages/kirin/package.json
@@ -16,7 +16,7 @@
     "precommit": "lint-staged",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint src/*/*.ts",
-    "test": "mocha -- test/*.ts"
+    "test": "mocha -- test/test*.ts"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.js",
@@ -29,6 +29,7 @@
     "text-table": "^0.2.0"
   },
   "devDependencies": {
+    "@web-overlay/portal": "^0.0.0",
     "@types/base64-js": "^1.2.5",
     "@types/debug": "^4.1.5",
     "@types/jssha": "^2.0.0",
@@ -46,7 +47,6 @@
     "mocha-typescript": "^1.1.17",
     "prettier": "^2.0.5",
     "source-map-support": "^0.5.18",
-    "ts-loader": "^6.2.2",
     "ts-node": "^8.9.0",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.3"
