--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "build": "lerna run build --include-dependents",
-    "lint": "lerna run lint --parallel",
-    "test": "lerna run test --parallel"
+    "lint": "lerna run --stream lint",
+    "test": "lerna run --stream test"
   }
 }
